--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "@meteor-typings/simple-schema",
-  "version": "1.0.1",
-  "description": "Type definitions for aldeed:simple-schema",
-  "scripts": {
-    "build": "typings bundle --global -o out/main.d.ts",
-    "test": "tsc"
-  },
-  "devDependencies": {
-    "tsc": "^1.20150623.0",
-    "typings": "^1.0.4"
-  }
+	"name": "@meteor-typings/simple-schema",
+	"version": "1.0.2",
+	"description": "Type definitions for aldeed:simple-schema",
+	"scripts": {
+		"build": "typings bundle --global -o out/main.d.ts",
+		"test": "tsc"
+	},
+	"devDependencies": {
+		"tsc": "^2.0.0",
+		"typings": "^2.0.0"
+	}
 }
